--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "jest-dom": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "react-testing-library": "^8.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-mock-store": "^1.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
